--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,65 @@
-/* Styles.css */
-
-* {
+body {
     font-family: 'Lato', sans-serif;
+    color: #747704;
+    font-weight: 300;
 }
 
-h1,
-h3 {
-    text-align: right;
+.text-muted {
+    color: #bcbbbb;
+}
+
+.text-thin {
+    font-weight: 100;
+}
+
+.title-super {
+    font-size: 50px;
+}
+
+.title-logo {
+    margin-top: 20px;
+    color: #02b3e4;
+}
+
+.hearder-image {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+hr {
+    border: solid 1px #7d97ad;
+    width: 100%;
+}
+
+h1 {
+    font-weight: bold;
+    color: #2d3c49;
+}
+
+h4 {
+    color: #2d3c49;
+}
+
+#myimage {
+    height: 100%;
+    width: 100%;
+}
+
+#footer {
+    display: flex;
+    text-align: center;
+    position: absolute;
+    font-size: 20px;
+    max-width: 100%;
+}
+
+ul li {
+    list-style-type: none;
+    display: inline-block;
+    margin: 2px;
+    max-width: 100%;
+}
+
+.footer-line {
+    margin-left: 50px;
 }
